--- a/templates/surgery/index.html
+++ b/templates/surgery/index.html
@@ -27,5 +27,10 @@
             </tr>
             {% endfor %}
         </table>
+        <p>If the animal is not in above list. Please input the animalid and search.</p>
+        <form action="info/" method="get">
+            Animal id: <input type="text" name="animalid">
+            <input type="submit" value="Search">
+        </form>
     </body>
 </html>
