--- a/templates/surgery/index.html
+++ b/templates/surgery/index.html
@@ -6,6 +6,8 @@
 
     <body>
         <h3>Surgery treated animal list</h3><br>
+        <a href = "addanimal">Add a new animal</a>
+
         <table>
             <tr>
                 <th>animalid</th>
