--- a/templates/surgery/index.html
+++ b/templates/surgery/index.html
@@ -2,7 +2,17 @@
 
 {% block customecss %}
 {% load static %}
+<!--
 <link rel="stylesheet" type="text/css" href="{% static "surgery/style.css" %}">
+-->
+<style>
+td {
+    padding: 10px 10px;
+}
+th {
+    align: center;
+}
+</style>
 {% endblock %}
 
 {% block content %}
