--- a/templates/surgery/info.html
+++ b/templates/surgery/info.html
@@ -1,34 +1,40 @@
-id: {{ animal.animalid }}<br>
-species: {{ animal.species }}<br>
-strain: {{ animal.strain }}<br>
-gender: {{ animal.gender }}<br>
-transgenic id: {{ animal.transgenic_id }}<br>
-birthday: {{ animal.birthday }}<br>
-ear punch: {{ animal.ear_punch }}<br>
-<p style="background-color:lightgray;">Treatments: </p>
-{% for value in treatments %}
-===================================================<br>
-{{ value.method }}<br>
-{{ value.date}}<br>
-{% for key, value in value.parameters.items %}
-{{ key }}: {{ value }}<br>
-{% endfor %}
-{{ value.note}}<br>
-{% endfor %}
-<br>
-<p style="background-color:lightgray;">Add a new treatment (Note: not add this function yet)</p>
-<form action="addtreatment" method="POST">
-<select name="treatmenttype"> 
-    <option selected="true" disabled="disabled">Choose a treatment type</option> 
-    <option value="aavinject">aav inject</option> 
-    <option value="windowsetup">window setup</option> 
-    <option value="drug">drug treatment</option> 
-    <option value="purfusion">purfusion</option> 
-    <option value="tbi">traumatic head injury</option> 
-</select> 
-<input type="submit" value="Add"><br>
+{% extends 'base.html' %}
+
+{% block content %}
+
+    id: {{ animal.animalid }}<br>
+    species: {{ animal.species }}<br>
+    strain: {{ animal.strain }}<br>
+    gender: {{ animal.gender }}<br>
+    transgenic id: {{ animal.transgenic_id }}<br>
+    birthday: {{ animal.birthday }}<br>
+    ear punch: {{ animal.ear_punch }}<br>
+    <p style="background-color:lightgray;">Treatments: </p>
+    {% for value in treatments %}
+    ===================================================<br>
+    {{ value.method }}<br>
+    {{ value.date}}<br>
+    {% for key, value in value.parameters.items %}
+    {{ key }}: {{ value }}<br>
+    {% endfor %}
+    {{ value.note}}<br>
+    {% endfor %}
+    <br>
+    <p style="background-color:lightgray;">Add a new treatment (Note: not add this function yet)</p>
+    <form action="addtreatment" method="POST">
+    <select name="treatmenttype"> 
+        <option selected="true" disabled="disabled">Choose a treatment type</option> 
+        <option value="aavinject">aav inject</option> 
+        <option value="windowsetup">window setup</option> 
+        <option value="drug">drug treatment</option> 
+        <option value="purfusion">purfusion</option> 
+        <option value="tbi">traumatic head injury</option> 
+    </select> 
+    <input type="submit" value="Add"><br>
 
 
-</form>
+    </form>
 
-<a href="../">return</a>
+    <a href="../">return</a>
+
+{% endblock %}
